--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -43,5 +43,13 @@
   text-decoration: none;
   font-size: 20px;
   font-weight: 500;
-  color: #9fa4a7;
+  color: #fff;
+  font-family: "Cormorant Upright", serif;
+}
+
+.ibr_menu_display {
+  right: 20px;
+  z-index: 1000;
+  top: 60px;
+  position: fixed;
 }
