--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,24 +1,22 @@
 .ibr_footer_container {
-  height: 150px;
+  height: 130px;
   width: 100%;
-  background-color: #000;
-  border-radius: 40px 40px 0 0;
-  z-index: 50;
-  margin-top: -100px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   color: #ffff;
+  position: absolute;
+  text-align: center;
 }
+
 .ibr_footer_lift_side_container {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  margin-right: 50px;
 }
 .ibr_footer_lift_side_container_a {
-  height: 30px !important;
+  height: 50px !important;
   width: 30px !important;
   margin-left: 50px !important;
+  flex-direction: row-reverse;
 }
 
 .ibr_footer_center_side_container {
@@ -28,14 +26,6 @@
   flex-direction: column;
 }
 
-.ibr_image_footer {
-  height: 60px;
-  width: 60px;
-  object-fit: cover;
-  border-radius: 50%;
-  margin-top: 15px;
-}
-
 .ibr_footer_logo_a {
   text-decoration: none;
   margin-top: 10px;
@@ -43,16 +33,35 @@
 
 .ibr_footer_logo_a h3 {
   height: 40px;
-  width: 130px;
+  width: 120px;
+  margin-right: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  background-color: #fff;
-  border: 1px solid #9fa4a7;
-  border-radius: 10px;
-  font-size: 30px;
-  font-weight: 500;
+  font-size: 25px;
+  font-weight: 600;
   color: #000000;
-  font-family: "Macondo", cursive;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+.ibr_footer_lift_side_container_a img {
+  font-size: 20px;
+  height: 35px;
+  width: 35px;
+  object-fit: contain;
+  text-decoration: none;
+  color: #000000;
+  font-size: "Josefin Sans", sans-serif;
+}
+
+.ibr_footer_lift_side_container_a_pixel img {
+  font-size: 20px;
+  height: 40px;
+  width: 40px;
+  object-fit: contain;
+  text-decoration: none;
+  color: #000000;
+  font-size: "Josefin Sans", sans-serif;
+  margin-left: 50px;
 }
