--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -4,7 +4,6 @@
   align-items: center;
   width: 100%;
   height: 80px;
-  background-color: #000000;
 }
 
 .ibr_navbar_sides_container {
@@ -28,14 +27,30 @@
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  background-color: #fff;
-  border: 1px solid #9fa4a7;
   border-radius: 10px;
   margin-left: 20px;
-  font-size: 30px;
-  font-weight: 500;
+  font-size: 25px;
+  font-weight: 600;
   color: #000000;
-  font-family: "Macondo", cursive;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+.ibr_center_link_navbar {
+  margin-left: 230px;
+}
+
+.ibr_navbar_link_Portfolio {
+  margin-left: 50px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 500;
+  color: #00adb5;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+.ibr_navbar_link_Portfolio:hover {
+  transition: 0.9s;
+  color: #000;
 }
 
 .ibr_navbar_link {
@@ -43,8 +58,18 @@
   text-decoration: none;
   font-size: 20px;
   font-weight: 500;
-  color: #fff;
-  font-family: "Cormorant Upright", serif;
+  color: #000000;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+.ibr_navbar_link:hover {
+  margin-left: 50px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 500;
+  color: #00adb5;
+  font-family: "Josefin Sans", sans-serif;
+  transition: 0.5s;
 }
 
 .ibr_menu_display {
@@ -52,4 +77,5 @@
   z-index: 1000;
   top: 60px;
   position: fixed;
+  color: #00adb5;
 }
