--- a/src/components/Photos/style.css
+++ b/src/components/Photos/style.css
@@ -4,17 +4,16 @@
   align-items: center !important;
   flex-direction: column;
   width: 800px;
-  margin-top: 200px !important;
+  margin-top: 30px;
 }
 
 .ibr_card_photo_detail_container p {
   font-size: 30px;
   margin-bottom: 15px;
-  color: #000 !important;
-  font-family: "Josefin Sans", sans-serif !important;
+  color: #fff;
 }
 
-.ibr_card_img {
+.ibr_card_img img {
   height: 550px;
   width: 1000px;
   border-radius: 30px;
@@ -34,7 +33,6 @@
   align-items: center !important;
   flex-direction: column !important;
   margin-top: 10px;
-  font-family: "Josefin Sans", sans-serif !important;
 }
 
 .ibr_card_photo_detail_container_description h2 {
@@ -58,7 +56,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Josefin Sans", sans-serif !important;
+  font-family: "Macondo", cursive;
   border-radius: 20px;
   background-color: #fff;
   border: none;
