--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -59,7 +59,7 @@
 }
 
 .ibr_right_side_small_text {
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .ibr_animation_header_page {
@@ -67,6 +67,7 @@
   width: 270px;
   z-index: 100;
   margin-top: -200px !important;
+  margin-left: 340px;
 }
 
 /* 
