--- a/src/components/Photos/style.css
+++ b/src/components/Photos/style.css
@@ -1,71 +1,94 @@
-.ibr_card_photo_detail_container {
+.ibr_card_photo_container {
   display: flex;
-  justify-content: center !important;
+  justify-content: flex-start !important;
   align-items: center !important;
   flex-direction: column;
   width: 800px;
-  margin-top: 30px;
+  height: auto;
+  box-shadow: rgba(0, 0, 0, 0.213) 0px 3px 8px;
+  margin-top: 50px;
+  border-radius: 20px;
 }
 
-.ibr_card_photo_detail_container p {
-  font-size: 30px;
-  margin-bottom: 15px;
-  color: #fff;
+.ibr_card_photo_container:hover {
+  box-shadow: rgba(0, 0, 0, 0.091) 0px 3px 8px;
+  transition: 0.8s;
 }
 
-.ibr_card_img img {
-  height: 550px;
-  width: 1000px;
-  border-radius: 30px;
-}
-
-.ibr_card_photo_detail_container_title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.ibr_card_photo_detail_container_description {
-  height: 90px;
+.ibr_card_photo_container img {
+  height: 60%;
   width: 100%;
+  object-fit: contain !important;
+  border-radius: 20px 20px 0px 0px;
+}
+
+.ibr_card_photo_detail_time_data {
   display: flex;
   justify-content: center !important;
   align-items: center !important;
-  flex-direction: column !important;
-  margin-top: 10px;
-}
-
-.ibr_card_photo_detail_container_description h2 {
-  margin-bottom: 20px;
-}
-
-.ibr_heder_btn_animation {
-  height: 200px;
-  width: 200px;
-}
-
-.btn_animation {
-  height: 50px !important;
-  width: 200px !important;
-}
-
-.ibr_heder_btn_animation button {
-  height: 40px;
-  width: 200px;
-  font-size: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Macondo", cursive;
-  border-radius: 20px;
-  background-color: #fff;
-  border: none;
-  cursor: pointer;
+  width: 100%;
+  height: 5%;
+  margin-right: 180px;
   margin-top: 20px;
 }
 
-.animation_button {
-  margin-left: 10px;
-  height: 30px !important;
-  width: 30px !important;
+.ibr_card_photo_detail_time_data p {
+  font-size: 20px;
+  margin-left: 15px;
+  color: #4c525a !important;
+  font-family: "Josefin Sans", sans-serif !important;
+}
+
+.ibr_line_card {
+  width: 90%;
+  margin-left: 5%;
+  height: 0.00001px;
+  border: 0.1px solid #4c525a;
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+.ibr_card_photo_detail_name {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 90%;
+  height: 20%;
+  margin-left: 5%;
+  margin-top: 20px;
+}
+
+.ibr_card_photo_detail_name h2 {
+  color: #00adb5;
+  font-family: "Josefin Sans", sans-serif !important;
+  margin-top: 10px;
+}
+
+.ibr_card_photo_detail_name p {
+  font-family: "Josefin Sans", sans-serif !important;
+  margin-top: 15px;
+  font-size: 25px;
+}
+
+.ibr_btn_post {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 5%;
+}
+
+.ibr_btn_card_Post {
+  width: 50%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px !important;
+  background-color: #435832;
+  border: none;
+  color: #000 !important;
+  text-transform: lowercase !important;
+  font-family: "Josefin Sans", sans-serif !important;
 }
